apps/hortusfox/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hortusfox
  labels:
    app.kubernetes.io/name: hortusfox
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: hortusfox
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hortusfox
        app.kubernetes.io/component: app
    spec:
      containers:
        - name: hortusfox
          image: ghcr.io/danielbrendel/hortusfox-web:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              memory: 256Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /var/www/html/public/img
              subPath: img
            - name: data
              mountPath: /var/www/html/public/attachments
              subPath: attachments
            - name: data
              mountPath: /var/www/html/app/logs
              subPath: logs
            - name: data
              mountPath: /var/www/html/public/backup
              subPath: backup
            - name: data
              mountPath: /var/www/html/public/themes
              subPath: themes
            - name: data
              mountPath: /var/www/html/app/migrations
              subPath: migrations
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: hortusfox-data
