apps/hortusfox/templates/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  labels:
    app.kubernetes.io/name: hortusfox
    app.kubernetes.io/component: mariadb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: hortusfox
      app.kubernetes.io/component: mariadb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hortusfox
        app.kubernetes.io/component: mariadb
    spec:
      securityContext:
        fsGroup: 999
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: mariadb
          image: mariadb:13.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              name: mariadb
          resources:
            requests:
              memory: 256Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mariadb-data
