apps/hortusfox/templates/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  labels:
    app.kubernetes.io/name: hortusfox
    app.kubernetes.io/component: mariadb
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hortusfox
    app.kubernetes.io/component: mariadb
  ports:
    - name: mariadb
      protocol: TCP
      port: 3306
      targetPort: mariadb
