apps/hortusfox/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hortusfox
  labels:
    app.kubernetes.io/name: hortusfox
    app.kubernetes.io/component: app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hortusfox
    app.kubernetes.io/component: app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
